2001-06-19  Philip Blundell  <philb@gnu.org>

	* configure.in: Set version to 2.11.2.
	* configure: Regenerate.

2001-06-19  Andreas Jaeger  <aj@suse.de>

	Merge from mainline sources:
	2001-06-19  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Fix creation of
	dynamic symbols.
	2001-06-07  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_finish_dynamic_symbol): Add an
	assertion.
	(elf64_x86_64_check_relocs): Set an alignment of 8 for .rela
	sections; handle further relocations.
	2001-06-01  Andreas Jaeger  <aj@suse.de>
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Add PC8
	relocation, small reformatting.

2001-06-14  Nick Clifton <nickc@redhat.com>

	Merge from mainline sources:
	2001-04-27  Sean McNeil <sean@mcneil.com>
	* config.bfd: Add arm-vxworks target.
	* coff-arm (coff_arm_relocate_section): Add in symbol value to
	addend (fro VXworks targets).
	2001-03-06  Nick Clifton  <nickc@redhat.com>
	* elf32-arm.h (elf32_arm_final_link_relocate): Clear bit zero
	of offset in BLX(1) instruction.
	* coff-arm.c (coff_arm_relocate_section): Clear bit zero of
	offset in BLX(1) instruction.
        Fix formatting.
	2001-03-06  Nick Clifton  <nickc@redhat.com>
	* coff-arm.c (coff_arm_reloc_type_lookup): Add
	BFD_RELOC_THUMB_PCREL_BLX.
	2001-05-04  Nick Clifton  <nickc@cambridge.redhat.com>
	* elf32-arm.h (elf32_arm_final_link_relocate): Set
        EF_ARM_HASENTRY if the start address is set.

2001-06-11  Alan Modra  <amodra@bigpond.net.au>

	* configure.in (<COREFILE case stmt>): Move powerpc-*-*bsd* after
	powerpc-*-freebsd*.

	Merge from mainline.
	2001-06-02  H.J. Lu  <hjl@gnu.org>
	* elf32-hppa.c (elf32_hppa_object_p): Check ELFOSABI_LINUX
	and ELFOSABI_HPUX.
	* elf64-hppa.c (elf64_hppa_object_p): Likewise.

	2001-06-02  Hans-Peter Nilsson  <hp@axis.com>
	* section.c (_bfd_strip_section_from_output): Handle NULL
	output_section.

	2001-05-30  Alan Modra  <amodra@one.net.au>